--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -18,12 +18,13 @@ jobs:
 
       - run: yarn install --frozen-lockfile
 
+      - run: yarn build
+
       - uses: actions/setup-node@v4
         with:
-          node-version: 'lts/*'
-          registry-url: 'https://npm.pkg.github.com'
+          node-version: "lts/*"
+          registry-url: "https://npm.pkg.github.com"
 
       - run: yarn publish --ignore-scripts --no-git-tag-version
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
